--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="et">#D32F2F</color>
+    <color name="bgBottomNavigation">#fe485a</color>
 </resources>
