--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.MoneyManager.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.MoneyManager.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    </style>
+
+
 
     <style name="Theme.MoneyManager.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
