--- a/app/src/main/res/layout/fragment_thu_chi__hang_ngay.xml
+++ b/app/src/main/res/layout/fragment_thu_chi__hang_ngay.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.ViTienFragment">
+    tools:context=".Fragment.ThuChi.ThuChi_HangNgayFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/frag_recyclerView_thuchi_hangngay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </FrameLayout>
