--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -30,7 +30,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:padding="10dp"
-        android:text="Name"
+        android:hint="Name"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:textSize="20sp" />
@@ -67,21 +67,6 @@
         android:textColorHint="#FFFFFF"
         android:textSize="20sp" />
 
-    <EditText
-        android:id="@+id/reg_etRePassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/et"
-        app:backgroundTint="@color/et"
-        android:hint="Re-enter Password"
-        android:inputType="textPassword"
-        android:padding="10dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btnSignup"
