--- a/app/src/main/res/layout/activity_them_thu_chi.xml
+++ b/app/src/main/res/layout/activity_them_thu_chi.xml
@@ -40,6 +40,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabThu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thu"/>
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabChi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Chi"/>
         </com.google.android.material.tabs.TabLayout>
 
 
@@ -79,22 +91,22 @@
         </androidx.appcompat.widget.Toolbar>
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/frag_Toolbar_ThemThuChi_TaiKhoan"
+            android:id="@+id/frag_Toolbar_ThemThuChi_ViTien"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
             <TextView
-                android:id="@+id/TextView_taikhoan"
+                android:id="@+id/TextView_vitien"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:text="Tài khoản"
+                android:text="Ví tiền"
                 android:layout_marginTop="24dp"
                 android:textSize="20dp"></TextView>
 
             <EditText
-                android:id="@+id/editText_taikhoan"
+                android:id="@+id/editText_vitien"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -167,7 +179,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -199,7 +211,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -240,7 +252,6 @@
 
                 />
         </androidx.appcompat.widget.Toolbar>
-
 
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
