--- a/app/src/main/res/layout/fragment_cai_dat.xml
+++ b/app/src/main/res/layout/fragment_cai_dat.xml
@@ -8,11 +8,6 @@
     tools:context=".Fragment.CaiDatFragment">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
-
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/frag_Toolbar1_caidat"
             android:layout_width="match_parent"
@@ -21,7 +16,7 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
             <Button
-                android:id="@+id/frag_Toolbar_ThemThuChi_back"
+                android:id="@+id/frag_Toolbar_caidat_back"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="left"
@@ -36,15 +31,17 @@
                 android:text="Cài đặt"
                 android:textSize="25dp"></TextView>
         </androidx.appcompat.widget.Toolbar>
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="50dp"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
 
+
+
+        <TextView
+            android:id="@+id/tvShowUserName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:textSize="30sp"
+            android:text="TextView" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/frag_Toolbar2_caidat"
@@ -167,8 +164,6 @@
                 android:textAlignment="center"
                 android:textColor="@color/black" />
         </androidx.appcompat.widget.Toolbar>
-
-    </LinearLayout>
 
 
 </LinearLayout>
