--- a/app/src/main/res/drawable/pre_background.xml
+++ b/app/src/main/res/drawable/pre_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient android:angle="45"
-        android:startColor="#2C3E50"
-        android:endColor="#FD746C"/>
+        android:startColor="#ee0979"
+        android:endColor="#ff6a00"/>
 
 </shape>
