--- a/app/src/main/res/layout/activity_them_vi_tien.xml
+++ b/app/src/main/res/layout/activity_them_vi_tien.xml
@@ -50,7 +50,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginRigsht="16dp"
+            android:layout_marginRight="16dp"
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +83,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginRigsht="16dp"
+            android:layout_marginRight="16dp"
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
