--- a/app/src/main/res/layout/fragment_list_vi_tien.xml
+++ b/app/src/main/res/layout/fragment_list_vi_tien.xml
@@ -7,11 +7,6 @@
     tools:context=".Fragment.ViTien.ListViTienFragment"
     android:layout_margin="5dp">
 
-    <ImageView
-        android:id="@+id/ivDonvi"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@android:drawable/ic_menu_view"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -25,12 +20,14 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:textStyle="bold"
+            android:layout_marginLeft="20dp"
             tools:text="Title" />
 
         <TextView
             android:id="@+id/tv_vitien_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:textSize="20sp"
             tools:text="Content" />
     </LinearLayout>
