--- a/app/src/main/res/layout/fragment_thu_chi.xml
+++ b/app/src/main/res/layout/fragment_thu_chi.xml
@@ -22,8 +22,17 @@
         android:id="@+id/frag_viewPager_thuchi"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/><![CDATA[
+        android:layout_weight="1"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:layout_marginBottom="60dp"
+        android:layout_marginRight="15dp"/>/>
     />
-]]>
+
 </LinearLayout>
