--- a/app/src/main/res/layout/fragment_thu_chi__thang.xml
+++ b/app/src/main/res/layout/fragment_thu_chi__thang.xml
@@ -6,9 +6,9 @@
     tools:context=".Fragment.ThuChi.ThuChi_ThangFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/frag_recyclerView_thuchi_tuan"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
