--- a/app/src/main/res/layout/bottom_sheet_layout_vitien.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_vitien.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
-    android:gravity="center_horizontal"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:stretchColumns="0,1,2"
-    android:padding="16dp">
-
-    <TableRow>
-        <Button
-            android:text="Tiền mặt"
-            android:id="@+id/vi_tienmat"/>
-        <Button
-            android:text="TK ngân hàng"
-            android:id="@+id/vi_nganhang"/>
-        <Button
-            android:text="Thẻ tín dụng"
-            android:id="@+id/vi_tindung"/>
-    </TableRow>
+    tools:context=".Fragment.ThuChi.BottomSheetDialog.BottomSheetDialog_ViTien">
 
 
-</TableLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/frag_recyclerView_dialog_vitien"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
+</LinearLayout>
