--- a/app/src/main/res/layout/fragment_vi_tien.xml
+++ b/app/src/main/res/layout/fragment_vi_tien.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:tag="vitien_fragment"
+    android:id="@+id/vitienFragment"
     tools:context=".Fragment.ViTien.ViTienFragment">
 
 
