--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,24 @@
     <color name="white">#FFFFFFFF</color>
     <color name="et">#D32F2F</color>
     <color name="bgBottomNavigation">#fe485a</color>
+
+    <color name="An_uong">#800000</color>
+    <color name="Giai_tri">#ff0000</color>
+    <color name="Giao_thong">#800080</color>
+    <color name="So_thich">#ff00ff</color>
+    <color name="Sinh_hoat">#008000</color>
+    <color name="Ao_quan">#00ff00</color>
+    <color name="Lam_dep">#808000</color>
+    <color name="Suc_khoe">#ffff00</color>
+    <color name="Giao_duc">#000080</color>
+    <color name="Su_kien">#0000ff</color>
+    <color name="Khac_chi">#00ffff</color>
+
+    <color name="Tien_luong">#ff0000</color>
+    <color name="Tien_thuong">#0000ff</color>
+    <color name="Tra_them_gio">#ffff00</color>
+    <color name="Khac_thu">#ff00ff</color>
+
+
+
 </resources>
