--- a/app/src/main/res/layout/fragment_thong_ke.xml
+++ b/app/src/main/res/layout/fragment_thong_ke.xml
@@ -22,6 +22,14 @@
             android:layout_gravity="left"
             android:background="@android:color/transparent" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="20dp"
+            android:text="-"
+            android:textSize="30dp"></TextView>
+
         <Button
             android:id="@+id/frag_Toolbar_thongke_EndDate"
             android:layout_width="wrap_content"
