--- a/app/src/main/res/layout/fragment_thong_ke__chi.xml
+++ b/app/src/main/res/layout/fragment_thong_ke__chi.xml
@@ -14,7 +14,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewGraph_chi"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="220dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="15dp"
@@ -80,7 +80,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="15dp"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="5dp">
 
                     <!--View to display the yellow color icon-->
                     <View
@@ -100,7 +101,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="15dp"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="5dp">
 
                     <!--View to display the yellow color icon-->
                     <View
@@ -120,7 +122,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="15dp"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="5dp">
 
                     <!--View to display the yellow color icon-->
                     <View
@@ -140,7 +143,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="15dp"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="5dp">
 
                     <!--View to display the yellow color icon-->
                     <View
@@ -160,7 +164,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="15dp"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="5dp">
 
                     <!--View to display the yellow color icon-->
                     <View
@@ -180,7 +185,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="15dp"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="5dp">
 
                     <!--View to display the yellow color icon-->
                     <View
@@ -200,7 +206,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="15dp"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="5dp">
 
                     <!--View to display the yellow color icon-->
                     <View
@@ -294,15 +301,16 @@
     <!-- Use of programming languages -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/cardViewGraph_chi"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:elevation="10dp"
+        android:scrollbars="horizontal"
         app:cardCornerRadius="10dp"
-        android:id="@+id/details">
+        android:id="@+id/details_chi">
 
         <!--Relative layout to display-->
         <!-- use of programming languages -->
@@ -313,14 +321,14 @@
 
             <!--Text view to use of -->
             <!-- programming languages text-->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Thống kê theo loại chi"
-                android:textSize="23sp"
-                android:textStyle="bold"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="20dp"/>
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Thống kê theo loại chi"-->
+<!--                android:textSize="23sp"-->
+<!--                android:textStyle="bold"-->
+<!--                android:layout_marginLeft="25dp"-->
+<!--                android:layout_marginTop="20dp"/>-->
 
             <!--View to display the line-->
             <View
@@ -336,7 +344,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <!--Text view to display R -->
@@ -376,7 +384,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <TextView
@@ -416,7 +424,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <TextView
@@ -455,7 +463,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <TextView
@@ -495,7 +503,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <!--Text view to display R -->
@@ -535,7 +543,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <!--Text view to display R -->
@@ -575,7 +583,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <!--Text view to display R -->
@@ -615,7 +623,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <!--Text view to display R -->
@@ -655,7 +663,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <!--Text view to display R -->
@@ -695,7 +703,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <!--Text view to display R -->
@@ -735,7 +743,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp">
 
                 <!--Text view to display R -->
