show list hang ngay

--- a/app/src/main/res/layout/fragment_thu_chi__hang_ngay.xml
+++ b/app/src/main/res/layout/fragment_thu_chi__hang_ngay.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment.ThuChi.ThuChi_HangNgayFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/frag_recyclerView_thuchi_hangngay"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/frag_tabLayout_thu_hangngay"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/frag_viewPager_thu_hangngay"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </androidx.viewpager2.widget.ViewPager2>
+</LinearLayout>
