--- a/app/src/main/res/layout/fragment_detail__hang_ngay.xml
+++ b/app/src/main/res/layout/fragment_detail__hang_ngay.xml
@@ -45,6 +45,13 @@
             android:textSize="20sp"
             tools:text="the loai" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
         <TextView
             android:id="@+id/tv_detail_ngay_vi"
             android:layout_width="wrap_content"
