--- a/app/src/main/res/layout/fragment_thu_chi.xml
+++ b/app/src/main/res/layout/fragment_thu_chi.xml
@@ -10,6 +10,36 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/frag_Toolbar_thongke"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+
+        <Button
+            android:id="@+id/frag_Toolbar_thuchi_StartDate"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_gravity="left"
+            android:background="@android:color/transparent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginEnd="20dp"
+            android:text="-"
+            android:textSize="30dp"></TextView>
+
+        <Button
+            android:id="@+id/frag_Toolbar_thuchi_EndDate"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_gravity="left"
+            android:background="@android:color/transparent" />
+    </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/frag_tabLayout_thuchi"
