--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="bottom"
+        app:itemIconSize="30dp"
         android:background="@color/bgBottomNavigation"
         app:itemTextColor="@color/white"
         app:labelVisibilityMode="labeled"
