--- a/app/src/main/res/layout/activity_them_vi_tien.xml
+++ b/app/src/main/res/layout/activity_them_vi_tien.xml
@@ -85,7 +85,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
